[tool.poetry]
name = "exercise"
version = "0.1.0"
description = "Exercise"
authors = ["exercise"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "1.*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
